--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "christian-magnet",
+   "id": "union-tomorrow",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "tracked-nightlife",
+   "id": "broadband-violence",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "prescription-compound",
+   "id": "armed-simulation",
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "armed-boundary",
+   "id": "southern-supervision",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "detected-prerequisite",
+   "id": "becoming-maryland",
    "metadata": {},
    "outputs": [
     {
@@ -349,32 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "burning-sector",
+   "execution_count": 2,
+   "id": "driven-peripheral",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\n",
-      "imp =\n",
-      "\n",
-      "     1     1\n",
-      "     2     1\n",
-      "     3     2\n",
-      "     4     2\n",
-      "     5     3\n",
-      "     6     3\n",
-      "     7     4\n",
-      "     8     4\n",
-      "\n",
-      "\n",
-      "fd =\n",
-      "\n",
-      "     1\n",
-      "\n",
-      "\n"
+      "\nfd =\n\n     1\n\n\n"
      ]
     }
    ],
@@ -386,51 +369,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "important-memorabilia",
+   "execution_count": 1,
+   "id": "brilliant-prior",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
-      "     1     1\n",
-      "     2     1\n",
-      "     3     2\n",
-      "     4     2\n",
-      "     5     3\n",
-      "     6     3\n",
-      "     7     4\n",
-      "     8     4\n",
+      "\u001b[1;31mError in calling magic 'plot' on line:\n",
+      "    'MatlabKernel' object has no attribute '_validated_plot_settings'\n",
+      "    args: ['native']\n",
+      "    kwargs: {'height': None, 'width': None, 'resolution': None, 'backend': 'inline', 'format': None, 'size': None}\n",
+      "\u001b[0m\u001b[1;31mTraceback (most recent call last):\n",
+      "  File \"C:\\Python38\\lib\\site-packages\\metakernel\\magic.py\", line 96, in call_magic\n",
+      "    func(*args, **kwargs)\n",
+      "  File \"C:\\Python38\\lib\\site-packages\\metakernel\\magics\\plot_magic.py\", line 58, in line_plot\n",
+      "    self.kernel.handle_plot_settings()\n",
+      "  File \"C:\\Python38\\lib\\site-packages\\matlab_kernel\\kernel.py\", line 203, in handle_plot_settings\n",
+      "    settings = self._validated_plot_settings\n",
+      "AttributeError: 'MatlabKernel' object has no attribute '_validated_plot_settings'\n",
       "\n",
+      "\u001b[0m\u001b[1;31m%plot [options] backend - configure plotting for the session.\n",
       "\n",
-      "act = \n",
+      "This line magic will configure the plot settings for this\n",
+      "language.\n",
       "\n",
-      "  1x13 string array\n",
+      "Examples:\n",
+      "    %plot qt --format=png\n",
+      "    %plot inline -w 640\n",
       "\n",
-      "  Columns 1 through 12\n",
+      "Note: not all languages may support the %plot magic, and not all\n",
+      "options may be supported.\n",
       "\n",
-      "    \"W\"    \"W\\_UP\"    \"W\\_D\"    \"SIT\"    \"ST\"    \"LAY\"    \"ST\\_SIT\"    \"SIT\\_ST\"    \"SIT\\_LIE\"    \"LIE\\_SIT\"    \"ST\\_LIE\"    \"LIE\\_ST\"\n",
-      "\n",
-      "  Column 13\n",
-      "\n",
-      "    \"\"\n",
-      "\n",
-      "\n",
-      "d =\n",
-      "\n",
-      "  8x20 char array\n",
-      "\n",
-      "    'acc_exp01_user01.txt'\n",
-      "    'acc_exp02_user01.txt'\n",
-      "    'acc_exp03_user02.txt'\n",
-      "    'acc_exp04_user02.txt'\n",
-      "    'acc_exp05_user03.txt'\n",
-      "    'acc_exp06_user03.txt'\n",
-      "    'acc_exp07_user04.txt'\n",
-      "    'acc_exp08_user04.txt'\n",
-      "\n",
-      "\n"
+      "Options:\n",
+      "-------\n",
+      "-h --height    Plot height in pixels\n",
+      "-w --width     Plot width in pixels\n",
+      "-r --resolution Resolution in pixels per inch\n",
+      "-b --backend   Backend selection [default: inline]\n",
+      "-f --format    Plot format (png, svg or jpg).\n",
+      "-s --size      Pixel size of plots, \"width,height\"\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -442,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fundamental-determination",
+   "id": "laden-chemistry",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -450,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "middle-toddler",
+   "id": "suitable-judge",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +440,7 @@
   "kernelspec": {
    "display_name": "Matlab",
    "language": "matlab",
-   "name": "matlab"
+   "name": "python382jvsc74a57bd02db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
   },
   "language_info": {
    "codemirror_mode": "octave",
